--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body{
     background-color: hsl(216, 50%, 16%);
     padding: 1.4em;
     border-radius: 0.8em;
-    margin-bottom: 1em;
+    margin-bottom: 2em;
 }
 
 .container .card_picture{
@@ -28,15 +28,27 @@ body{
     border-radius: 0.4em;
 }
 
+.container .card_picture:hover{
+    cursor: pointer;
+    content: url(./images/icon-view.svg);
+    background-color: hsl(178, 100%, 50%);
+}
+
 .details{
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    align-items: center;
     margin-bottom: 1em;
 }
 
 .description h2{
     margin: 1em 0em 0.5em 0em;
+}
+
+.description h2:hover{
+    color: hsl(178, 100%, 50%);
+    cursor: pointer;
 }
 
 .soft-blue{
@@ -76,4 +88,26 @@ body{
 
 .creator{
     display: flex;
+    align-items: center;
+}
+
+.creator p{
+    color: hsl(215, 51%, 70%);
+    font-weight: 300;
+}
+
+.creator span{
+    color: hsl(0, 0%, 100%);
+    font-weight: 300;
+}
+.creator span:hover{
+    color: hsl(178, 100%, 50%);
+    cursor: pointer;
+}
+
+.creator img{
+    height: 2em;
+    margin-right: 1em;
+    border: .1em solid hsl(0, 0%, 100%);
+    border-radius: 100%;
 }
