--- a/style.css
+++ b/style.css
@@ -31,13 +31,15 @@ body{
 .card_picture:hover{
     cursor: pointer;
     content: url(./images/icon-view.svg);
-    width: 100%;
-}
+    height: 20%;
+    padding: 6.165em 6.7em;
+} 
 
 .overlay:hover{
     background-color: hsl(178, 100%, 50% ,0.4);
     height: 15em;
     border-radius: 0.4em;
+    position: absolute;
 }
 
 .details{
@@ -106,6 +108,7 @@ body{
     color: hsl(0, 0%, 100%);
     font-weight: 300;
 }
+
 .creator span:hover{
     color: hsl(178, 100%, 50%);
     cursor: pointer;
